<resources>
    <string name="app_name">Thermostat</string>
    <string name="title_home">Home</string>
    <string name="title_program">Week Schedule</string>
    <string name="title_settings">More</string>
    <string name="current_temp">Current temperature:</string>
    <string name="toggle_program">Activate week schedule</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="test">Hello %1$d</string>
    <string name="lastupdate">Temperature was last updated on:\n</string>
    <string name="nighttemp">Night temperature:</string>
    <string name="daytemp">Day temperature:</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="failed">Failed</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="noswitch">No switches left</string>
    <string name="noswitchset">No switches are set</string>
</resources>
