<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FragmentSettings">


    <!--<android.support.v7.widget.CardView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="8dp"-->
    <!--app:contentPadding="8dp">-->

    <!--<android.support.constraint.ConstraintLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<TableLayout-->
    <!--android:layout_width="312dp"-->
    <!--android:layout_height="49dp"-->
    <!--android:gravity="center"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent">-->

    <!--<TableRow-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<Button-->
    <!--android:id="@+id/getdata"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="GET Data" />-->

    <!--<Button-->
    <!--android:id="@+id/putdata"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="PUT Data" />-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<TextView-->
    <!--android:id="@+id/data1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="getParam"-->
    <!--android:textAlignment="center" />-->

    <!--<TextView-->
    <!--android:id="@+id/data2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="old value"-->
    <!--android:textAlignment="center" />-->

    <!--</TableRow>-->

    <!--</TableLayout>-->

    <!--</android.support.constraint.ConstraintLayout>-->

    <!--</android.support.v7.widget.CardView>-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.3"
        app:contentPadding="8dp">


        <Button
            android:id="@+id/putdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Reset week schedule" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daytemp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/day_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21.0 &#x2103;"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bMinusDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_fullcircle_24dp"
                    android:src="@drawable/ic_minus_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/seekBarDay"
                    style="@android:style/Widget.DeviceDefault.SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:max="250"
                    android:maxHeight="4dp"
                    android:padding="8dp"
                    android:progress="210"
                    android:progressDrawable="@drawable/progress_drawable"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/bMinusDay"
                    app:layout_constraintRight_toLeftOf="@+id/bPlusDay"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/bPlusDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_fullcircle_24dp"
                    android:src="@drawable/ic_plus_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/saveDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/save" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/night_text"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nighttemp" />

            <TextView
                android:id="@+id/night_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18.0 &#x2103;"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bMinusNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_fullcircle_24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_minus_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/seekBarNight"
                    style="@android:style/Widget.DeviceDefault.SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:max="250"
                    android:maxHeight="4dp"
                    android:padding="8dp"
                    android:progress="130"
                    android:progressDrawable="@drawable/progress_drawable"
                    android:thumbTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/bMinusNight"
                    app:layout_constraintRight_toLeftOf="@+id/bPlusNight"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/bPlusNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_fullcircle_24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_plus_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/saveNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/save" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/getdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GET Data" />

        <Button
            android:id="@+id/putdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PUT Data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="getParam"
            android:id="@+id/data1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="old value"
            android:id="@+id/data2" />

    </LinearLayout>-->